@@ -379,6 +379,11 @@ h2, h3 {
   font-size: @font-size-large;
 }
 
+.announcement-heading.small {
+  font-size: @font-size-small;
+}
+
+
 .announcement-text {
   font-size: @font-size-small;
   color: @gray-light;
