@@ -86,9 +86,9 @@
       </div>
 
       <div class="row">
-        <div class="col-sm-6 col-xs-12">
-          <h3 class="panel-headline">Load</h3>
+        <div class="col-sm-4 col-xs-8">
           <div class="panel">
+            <h3 class="panel-headline">Load</h3>
             <p class="announcement-heading" ng-show="node.load['1'] >= 0">
               <span class="load-value">{{ node.load['1']|number:2 }}</span>
               <span class="load-value">{{ node.load['5']|number:2 }}</span>
@@ -102,16 +102,35 @@
             </p>
           </div>
         </div>
-        <div class="col-sm-6 col-xs-12">
-          <h3 class="panel-headline">Crate Process</h3>
+        <div class="col-sm-2 col-xs-4">
           <div class="panel">
-            <p class="announcement-heading" ng-show="node.proc_cpu.percent >= 0">{{ node.proc_cpu.percent|number:1 }}%</p>
-            <p class="announcement-heading" ng-hide="node.proc_cpu.percent >= 0">-</p>
-            <p class="announcement-text">CPU Usage</p>
+            <h3 class="panel-headline">CPU Cores</h3>
+            <p class="announcement-heading" ng-show="node.num_cores > 0">
+              <span class="load-value">{{ node.num_cores }}</span>
+            </p>
+            <p class="announcement-heading" ng-hide="node.num_cores > 0">-</p>
+            <p class="announcement-text">
+              <span class="load-label">Cores</span>
+            </p>
+          </div>
+        </div>
+        <div class="col-sm-6 col-xs-12">
+          <div class="panel">
+            <h3 class="panel-headline">Crate Process</h3>
+            <div class="chart-container">
+              <nvd3-multi-bar-horizontal-chart id="chart-process-cpu"
+                data="processCpuData"
+                height="20"
+                margin="{left: 0, top: 0, bottom: 0, right: 0}"
+                stacked="true"
+                tooltips="true"
+                tooltipcontent="toolTipUsedPercentFunction()">
+              </nvd3-multi-bar-horizontal-chart>
+            </div>
           </div>
         </div>
       </div>
-      
+
       <div class="row">
         <div class="col-sm-12">
           <h3 class="panel-headline">Shards</h3>
@@ -145,7 +164,7 @@
           </div>
         </div>
       </div>
-      
+
       <div class="row">
         <div class="col-sm-12">
           <h3 class="panel-headline">Disk Operations</h3>
